@@ -98,7 +98,7 @@ gdk_pixbuf_animation_new_from_file (const char *filename)
 		frame->delay_time = -1;
 		frame->action = GDK_PIXBUF_FRAME_RETAIN;
 
-		animation = g_new (GdkPixbufAnimation, 1);
+		animation = g_new0 (GdkPixbufAnimation, 1);
 		animation->ref_count = 1;
 		animation->n_frames = 1;
 		animation->frames = g_list_prepend (NULL, frame);
